[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mapsnatch"
version = "0.1.0"
description = "Bulk-export all your MindMeister maps without a Business plan"
license = {text = "AGPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

[project.scripts]
mapsnatch = "meister_export.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-mock>=3", "responses>=0.25"]

[tool.setuptools.packages.find]
where = ["src"]
